<?xml version="1.0"?>
<package>
  <name>point_space</name>
  <version>0.0.0</version>
  <description>The point_space package</description>

  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sam Pfeiffer</maintainer>


  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


</package>